- removed transitive clique generation, because this produces way too many cliques
- improved preprocessing abort criteria
- added flags READLINE=true/false, ZLIB=true/false, ZIMPL=true/false to Makefile
- added possibility to disable certain features by using "make USRFLAGS=-DNO_REMOVE_HISTORY",
  "make USRFLAGS=-DNO_SIGACTION", "make USRFLAGS=-DNO_RAND_R", or "make USRFLAGS=-DNO_STRTOK_R"

fixed bugs:
- LP primal feasibility for bounds is now defined as absolute measure (was relative to the bound before);
  this fixes a bug (see alu8_9.mps), that an LP with an integral variable fixed to a large value yields an
  accepted solution with that variable slightly different than the fixed value; the integrality feasibility
  condition is measured with absolute differences, which leads to the fixed integer variable being fractional;
  this leads to an error if branching is performed on this variable
- locally fixed variables are no longer used as branching candidates even if their LP solution value is
  fractional (due to numerical reasons, see above)
- fixed minor bugs in debug code of primal.c and sol.c
- variables that are being multiaggregated are now automatically removed from all other variables' variable bound
  and implication arrays; this fixes bugs with methods, that rely on the fact, that the entries in the variable
  bound and implication arrays are active variables only
- aggregations are now always performed in a way, such that the variable of more general type is aggregated
  (with type generality being cont > implint > int > bin); in this way, a binary variable's representant is
  always binary (which was not the case before, and resulted in a bug in SCIPgetBinvarRepresentative())
- removed wrong asserts from lpi_cpx.c
- global bound changes now lead to the removal of redundant implications (such that the asserts in sepa_implbounds.c
  are now correct)