@@ -1,5 +1,5 @@
-#--- $Id: make.darwin.ppc.gnu.dbg.static,v 1.2 2005/09/06 17:07:59 bzfpfend Exp $
-FLAGS		+=	# -DROUNDING_FE
+#--- $Id: make.darwin.ppc.gnu.dbg.static,v 1.3 2005/09/07 15:52:09 bzfpfend Exp $
+FLAGS		+=	-DNO_REMOVE_HISTORY # -DROUNDING_FE
 OFLAGS		+=	-O0 -g
 CFLAGS		+=	$(GCCWARN)
 CXXFLAGS	+=	$(GXXWARN)
