@@ -1,5 +1,5 @@
-#--- $Id: make.darwin.ppc.gnu.opt.static,v 1.3 2005/09/06 17:07:59 bzfpfend Exp $
-FLAGS		+=	-DNDEBUG # -DROUNDING_FE
+#--- $Id: make.darwin.ppc.gnu.opt.static,v 1.4 2005/09/07 15:52:10 bzfpfend Exp $
+FLAGS		+=	-DNDEBUG -DNO_REMOVE_HISTORY # -DROUNDING_FE
 OFLAGS		+=	-O3 -fomit-frame-pointer
 CFLAGS		+=	$(GCCWARN) -Wno-strict-aliasing -Wno-missing-declarations -Wno-missing-prototypes
 CXXFLAGS	+=	$(GXXWARN) -Wno-strict-aliasing # -fno-exceptions (CLP uses exceptions)
