@@ -132,6 +132,8 @@ features:
 - added flags READLINE=true/false, ZLIB=true/false, ZIMPL=true/false to Makefile
 - added possibility to disable certain features by using "make USRFLAGS=-DNO_REMOVE_HISTORY",
   "make USRFLAGS=-DNO_SIGACTION", "make USRFLAGS=-DNO_RAND_R", or "make USRFLAGS=-DNO_STRTOK_R"
+- linear constraint handler now catches events of variables after the problem was completely transformed in order
+  to avoid the whole bunch of LOCKSCHANGED events that are generated at problem transformation stage
 
 fixed bugs:
 - LP primal feasibility for bounds is now defined as absolute measure (was relative to the bound before);
